# LeetcodeClone

./: .gitignore  README.md  backend.sln
backend/: backend.sln
backend/BusinessObjects/: ApplicationDBContext.cs  BusinessObjects.csproj  Question.cs  Testcase.cs
backend/BusinessObjects/Migrations/: 20240924141248_helloworld.Designer.cs  20240924141248_helloworld.cs  20240927134323_helloworld.Designer.cs  20240927134323_helloworld.cs  20240927134544_leet1.Designer.cs  20240927134544_leet1.cs  20241008080625_helloworld4.Designer.cs  20241008080625_helloworld4.cs  20241008082938_helloworld5.Designer.cs  20241008082938_helloworld5.cs  20241011084707_InitialCreate.Designer.cs  20241011140248_helloworld6.Designer.cs  20241011140248_helloworld6.cs  20241011142819_helloworld7.Designer.cs  20241011142819_helloworld7.cs  20241011161838_NewTemplates.Designer.cs  20241011161838_NewTemplates.cs  20241022054124_ChangeDescription.Designer.cs  20241022054124_ChangeDescription.cs  20241025141426_helloworld8.Designer.cs  (+18 more)
backend/DataAccess/: AnswerQuestionRequestDTO.cs  DataAccess.csproj  ListQuestionResponseDTO.cs  QuestionDAO.cs  TestcaseDAO.cs
backend/ProjectWebApi/: Program.cs  ProjectWebApi.csproj  ProjectWebApi.http  WeatherForecast.cs  appsettings.json
backend/Properties/: launchSettings.json
backend/Repository/: QuestionRepository.cs  Repository.csproj  SubmissionRepository.cs
backend/RunEnv/cppTest/: CMakeLists.txt  Dockerfile  Solution.cpp  main.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
(+51 files in other folders)
